# Classification

./: .gitignore  CMakeLists.txt
BayesClassifier/: BayesClassifier.cpp  CMakeLists.txt
BayesClassifier/BayesModel/: BayesModel.cpp  CMakeLists.txt
BayesClassifier/BayesPrediction/: BayesPrediction.cpp  CMakeLists.txt
Cropping/: CMakeLists.txt  Cropping.cpp  Landmark.cpp  Landmark.h  Main.cpp
EllipticBoundary/: CMakeLists.txt  EllipticBoundary.cpp  EllipticBoundary.cpp.autosave
EllipticBoundary/EllipticBoundaryPrediction/: CMakeLists.txt  EllipticBoundaryPrediction.cpp
EllipticBoundary/EllipticBoundaryTraining/: CMakeLists.txt  EllipticBoundaryTraining.cpp
FastMarching/: CMakeLists.txt  itkConfigure.h
Gaussian/: CMakeLists.txt  Gaussian.cpp
Gaussian/GaussianPrediction/: CMakeLists.txt  GaussianPrediction.cpp
Gaussian/GaussianTraining/: CMakeLists.txt  GaussianTraining.cpp
Histograms/: CMakeLists.txt  Histograms.cpp
MixtureGaussian/: CMakeLists.txt  MixtureGaussian.cpp
MixtureGaussian/MixtureGaussianPrediction/: CMakeLists.txt  MixtureGaussianPrediction.cpp
MixtureGaussian/MixtureGaussianTraining/: CMakeLists.txt  MixtureGaussianTraining.cpp
StatisticFile/: CMakeLists.txt  StatisticFile.cpp
